syntax = "proto2";

package reservation;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "/";

service Reservation {
  rpc Create(CreateRequest) returns (ReservationResponse);
  rpc GetByID(GetByIdRequest) returns (ReservationResponse);
  rpc GetBySeat(GetBySeatRequest) returns (ReservationsResponse);
  rpc GetByClient(GetByClientRequest) returns (ReservationsResponse);
  rpc Get(GetRequest) returns (ReservationsResponse);
  rpc GetVisited(GetRequest) returns (ReservationsResponse);
  rpc Update(UpdateRequest) returns (ReservationResponse);
  rpc Cancel(DeleteRequest) returns (google.protobuf.Empty);
  rpc Visit(DeleteRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message ReservationResponse {
  required string id = 1;
  required string client_id = 2;
  required string seat_id = 3;
  required google.protobuf.Timestamp starts_at = 4;
  required google.protobuf.Timestamp ends_at = 5;
  required bool is_canceled = 6;
  required bool is_visited = 7;
}

message CreateRequest {
  required string client_id = 1;
  required bool is_admin = 2;
  required string seat_id = 3;
  required google.protobuf.Timestamp ends_at = 4;
  required google.protobuf.Timestamp starts_at = 5;
}

message GetByIdRequest {
  required string id = 1;
  required string client_id = 2;
  required bool is_admin = 3;
}

message GetBySeatRequest {
  required string seat_id = 1;
  required string client_id = 2;
  required bool is_admin = 3;
}

message GetByClientRequest {
  required string client_id = 1;
  required bool is_admin = 2;
  required uint32 limit = 3;
  required uint64 offset = 4;
}

message ReservationsResponse {
  repeated ReservationResponse reservations = 1;
}

message GetRequest {
  required uint32 limit = 1;
  required uint64 offset = 2;
  optional uint32 day = 3;
  optional uint32 month = 4;
  optional uint64 year = 5;
}

message DeleteRequest {
  required string id = 1;
  required string client_id = 2;
  required bool is_admin = 3;
}

message UpdateRequest {
  required string id = 1;
  required string client_id = 2;
  required bool is_admin = 3;
  optional string seat_id = 4;
  optional google.protobuf.Timestamp starts_at = 5;
  optional google.protobuf.Timestamp ends_at = 6;
  optional bool is_canceled = 7;
  optional bool is_visited = 8;
}
